--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -1,6 +1,9 @@
 ## הערות
 
  - יחידות מידה מיוצגות ע"י $[]$ (לדוגמה: $[m]$ - מטר)
+ - יחידות משקל:
+   - $m$ - מילי ($\frac{1}{1,000}$)
+   - $µ$ - מיקרו ($\frac{1}{1,000,000}$)
 
 
 ### חוק קולון:
@@ -8,11 +11,14 @@
 $F_E = k \cdot\frac{q_1 \cdot q_2}{r^2}$
 
  - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
-
+ - $r$ - מרחק
+ - $q$ - מטען חשמלי
 ---
 ### כוח הכובד:
 
-$F = G \cdot \frac{m_1m_2}{r^2}$
+$F = G \cdot \frac{m_1 \cdot m_2}{r^2}$
 
  - $G = 7 \cdot 10^-11 \hspace{2px} [\frac{N \cdot m^2}{kg^2}]$
+ - $r$ - מרחק
+ - $m$ - מסה
 
