עדכון לדף נוסחות

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -5,14 +5,25 @@
    - $m$ - מילי ($\frac{1}{1,000}$)
    - $µ$ - מיקרו ($\frac{1}{1,000,000}$)
 
+---
 
 ### חוק קולון:
 
-$F_E = k \cdot\frac{q_1 \cdot q_2}{r^2}$
+$\vec{F_E} = k \cdot\frac{q_1 \cdot q_2}{r^2}$
 
  - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
- - $r$ - מרחק
- - $q$ - מטען חשמלי
+ - $r$ - מרחק בין מטענים
+ - $q$ - מטען חשמלי של כל אחד מהם
+---
+
+### שדה חשמלי:
+
+$\vec{E} = \frac{\vec{F_c}}{q}$
+
+ - $F_c$ - ווקטור המייצג את הכוח שמופעל על המטען $q$ ע"י מרכז השדה
+ - $q$ - בנוסחה גודל המטען. מטען בוחן שאנו יוצרים בעל גודל שרירותי
+ - $[E] = \frac{[F_c]}{[q]} = [\frac{N}{C}]$ :יחידות מידה
+ - $\vec{E} =\frac{vector}{scalar}$, ולכן  השדה החשמלי (בנקודה שבה בוחנים אותו) הוא וקטור
 ---
 ### כוח הכובד:
 
@@ -20,5 +31,5 @@ $F = G \cdot \frac{m_1 \cdot m_2}{r^2}$
 
  - $G = 7 \cdot 10^-11 \hspace{2px} [\frac{N \cdot m^2}{kg^2}]$
  - $r$ - מרחק
- - $m$ - מסה
+ - $m$ - מסות של האובייקטים
 
