--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -20,10 +20,12 @@ $\vec{F_E} = k \cdot\frac{q_1 \cdot q_2}{r^2}$
 
 $\vec{E} = \frac{\vec{F_c}}{q}$
 
- - $F_c$ - ווקטור המייצג את הכוח שמופעל על המטען $q$ ע"י מרכז השדה
+ - $F_c$ - ווקטור המייצג את הכוח שמופעל על המטען $q$ ע"י מרכז השדה (חוק קולון)
  - $q$ - בנוסחה גודל המטען. מטען בוחן שאנו יוצרים בעל גודל שרירותי
  - $[E] = \frac{[F_c]}{[q]} = [\frac{N}{C}]$ :יחידות מידה
  - $\vec{E} =\frac{vector}{scalar}$, ולכן  השדה החשמלי (בנקודה שבה בוחנים אותו) הוא וקטור
+ - $\vec{E} = \frac{k \cdot q_{center}}{r^2}$:
+   - $q_{center}$ - מרכז השדה החשמלי
 ---
 ### כוח הכובד:
 
