--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -27,6 +27,20 @@ $\vec{E} = \frac{\vec{F_c}}{q}$
  - $\vec{E} = \frac{k \cdot q_{center}}{r^2}$:
    - $q_{center}$ - מרכז השדה החשמלי
 ---
+
+### כוח שדה חשמלי על מטען
+
+$\vec{F} = q \cdot \vec{E}$
+
+ - $q$ - גודל המטען
+ - $E$ - כוח השדה החשמלי 
+ - $\vec{F} = m\cdot a$, ומכאן נובע:
+
+$a = \frac{q \cdot \vec{E}}{m}$
+
+ - $a$ - תאוצת המטען
+ - $m$ - מסת המטען
+---
 ### כוח הכובד:
 
 $F = G \cdot \frac{m_1 \cdot m_2}{r^2}$
