הסברים טובים יותר, פיצול למשוואה נוספת

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -13,22 +13,31 @@ $\vec{F_E} = k \cdot\frac{q_1 \cdot q_2}{r^2}$
 
  - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
  - $r$ - מרחק בין מטענים
- - $q$ - מטען חשמלי של כל אחד מהם
+ - $q_1, q_2$ - מטען חשמלי של כל אחד מהחלקיקים
 ---
 
 ### שדה חשמלי:
-
+##### היחס בין הכוח החשמלי שהיה פועל על מטען נקודתי אילו היה נמצא בנקודה זאת, לבין אותו המטען:
 $\vec{E} = \frac{\vec{F_c}}{q}$
 
  - $F_c$ - ווקטור המייצג את הכוח שמופעל על המטען $q$ ע"י מרכז השדה (חוק קולון)
- - $q$ - בנוסחה גודל המטען. מטען בוחן שאנו יוצרים בעל גודל שרירותי
+ - $q$ - גודל המטען $q$ (לפעמים, $q$ נוצר על ידנו, ונקרא "מטען בוחן", וניתן לא גודל שרירותי)
  - $[E] = \frac{[F_c]}{[q]} = [\frac{N}{C}]$ :יחידות מידה
  - $\vec{E} =\frac{vector}{scalar}$, ולכן  השדה החשמלי (בנקודה שבה בוחנים אותו) הוא וקטור
- - $\vec{E} = \frac{k \cdot q_{center}}{r^2}$:
-   - $q_{center}$ - מרכז השדה החשמלי
 ---
 
-### כוח שדה חשמלי על מטען
+### עוצמת שדה חשמלי על מטען
+
+$\vec{F_{\vec{E_q}}} = \frac{k \cdot q_{center}}{r^2}$
+
+   - $\vec{F_{\vec{E_q}}}$ - הכוח $\vec{F}$ שמשקיע השדה החשמלי $\vec{E}$ על המטען $q$. בהצגות אחרות של נוסחה זו, משתמשים לפעמים ב-$\vec{E}$ במקום.
+   - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
+   - $q_{center}$ - מרכז השדה החשמלי
+   - $r$ - המרחק שממנו מודדים את עוצמת השדה החשמלי 
+     - $\lim_{r \rArr\infty} => \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{\infty^2} \approx 0$ - ככל שהמרחק שממנו מודדים גדול יותר, המכנה גדל, וכך פחות כוח מושקע.
+     - $\lim_{r \rArr 0} => \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{0.00 \ldots1^2} \approx \infty$ - אותו הדבר מהצד השני - כשהמרחק שואף ל-0, יותר כוח מושקע
+---
+### כוח משיכת מטען אל שדה חשמלי
 
 $\vec{F} = q \cdot \vec{E}$
 
