אנרגיה חשמלית ועוד כמה דברים

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -4,6 +4,7 @@
  - יחידות משקל:
    - $m$ - מילי ($\frac{1}{1,000}$)
    - $µ$ - מיקרו ($\frac{1}{1,000,000}$)
+   - $n$ - ננו ($\frac{1}{1,000,000,000}$)
 
 ---
 
@@ -24,18 +25,7 @@ $\vec{E} = \frac{\vec{F_c}}{q}$
  - $q$ - גודל המטען $q$ (לפעמים, $q$ נוצר על ידנו, ונקרא "מטען בוחן", וניתן לא גודל שרירותי)
  - $[E] = \frac{[F_c]}{[q]} = [\frac{N}{C}]$ :יחידות מידה
  - $\vec{E} =\frac{vector}{scalar}$, ולכן  השדה החשמלי (בנקודה שבה בוחנים אותו) הוא וקטור
----
 
-### עוצמת שדה חשמלי על מטען
-
-$\vec{F_{\vec{E_q}}} = \frac{k \cdot q_{center}}{r^2}$
-
-   - $\vec{F_{\vec{E_q}}}$ - הכוח $\vec{F}$ שמשקיע השדה החשמלי $\vec{E}$ על המטען $q$. בהצגות אחרות של נוסחה זו, משתמשים לפעמים ב-$\vec{E}$ במקום.
-   - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
-   - $q_{center}$ - מרכז השדה החשמלי
-   - $r$ - המרחק שממנו מודדים את עוצמת השדה החשמלי 
-     - $\lim_{r \rArr\infty} => \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{\infty^2} \approx 0$ - ככל שהמרחק שממנו מודדים גדול יותר, המכנה גדל, וכך פחות כוח מושקע.
-     - $\lim_{r \rArr 0} => \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{0.00 \ldots1^2} \approx \infty$ - אותו הדבר מהצד השני - כשהמרחק שואף ל-0, יותר כוח מושקע
 ---
 ### כוח משיכת מטען אל שדה חשמלי
 
@@ -50,11 +40,49 @@ $a = \frac{q \cdot \vec{E}}{m}$
  - $a$ - תאוצת המטען
  - $m$ - מסת המטען
 ---
-### כוח הכובד:
 
-$F = G \cdot \frac{m_1 \cdot m_2}{r^2}$
+### כוח שדה חשמלי על מטען
 
- - $G = 7 \cdot 10^-11 \hspace{2px} [\frac{N \cdot m^2}{kg^2}]$
- - $r$ - מרחק
- - $m$ - מסות של האובייקטים
+$\vec{F_{\vec{E_q}}} = \frac{k \cdot q_{center}}{r^2}$
 
+ - $\vec{F_{\vec{E_q}}}$ - הכוח $\vec{F}$ שמשקיע השדה החשמלי $\vec{E}$ על המטען $q$. בהצגות אחרות של נוסחה זו, משתמשים לפעמים ב-$\vec{E}$ במקום.
+ - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
+ - $q_{center}$ - מרכז השדה החשמלי
+ - $r$ - המרחק שממנו מודדים את עוצמת השדה החשמלי 
+   - $\lim_{r \rArr\infty} \rArr \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{\infty^2} \approx 0$ - ככל שהמרחק שממנו מודדים גדול יותר, המכנה גדל, וכך פחות כוח מושקע.
+   - $\lim_{r \rArr 0} \rArr \frac{k \cdot q_{center}}{r^2} = \frac{k \cdot q_{center}}{0.00 \ldots1^2} \approx \infty$ - אותו הדבר מהצד השני - כשהמרחק שואף ל-0, יותר כוח מושקע
+---
+
+### כוח לוח חשמלי אינסופי על מטען
+
+$\vec{E} = \frac{\sigma}{2 \cdot \epsilon _0}$
+
+ - $\vec{E}$ - הכוח שמשקיע אותו לוח אינסופי על המטען
+ - $\sigma$ - צפיפות המטען של אותו לוח חשמלי אינסופי.
+	- $[\sigma] = [\frac{C}{m^2}]$ (היחס בין המטען בקולון לשטח הלוח במטר רבוע)
+ - $\epsilon _0 = 8.85 \cdot 10^{-12}$ 
+---
+
+### אנרגיה חשמלית פוטנציאלית בין שני מטענים
+
+$\vec{U_p} = \frac{k \cdot q_1 \cdot q_2}{r}$
+
+ - $\vec{U_p}$ - האנרגיה הפוטנציאלית
+ - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
+ - $r$ - מרחק בין מטענים
+ - $q_1, q_2$ - מטען חשמלי של כל אחד מהחלקיקים
+
+##### ניתן להגיע למשוואה זו בעזרת חישוב העבודה שנעשתה על מנת להגיע למצב שבו $q1$ ו$q2$ הם $r$ מטרים זה מזה. את העבודה ניתן לחשב ע"י אינטגרל של הכוח (שאותו נוכל להשיג מחוק קולון) לפי מרחק:
+
+$W_{\vec{F_c}} = \int_r^\infty \frac{k \cdot q_1 \cdot q_2}{r^2}\\ \dArr \\ W_{\vec{F_c}} = \frac{k \cdot q_1 \cdot q_2}{r}\\\dArr\\ \vec{U_p} = \frac{k \cdot q_1 \cdot q_2}{r}$
+---
+
+### אנרגיה חשמלית כוללת
+
+$\vec{U}_{system} = \Sigma \vec{U}$
+
+ - $\vec{U}_{system}$ - האנרגיה החשמלית הקיימת במערכת.
+ - $\Sigma \vec{U}$ סכום האנרגיות החשמליות המושקעות באותה מערכת. הסכום מורכב מכל זוגות המטענים הקיימים במערכת. מערכות חד מימדיות לדוגמה: (הקו מייצג ציר עליו המטענים נמצאים)
+   - $–q_1–––q_2–––––q_3– \rArr \vec{U}_{system} = \vec{U}_{q_1q_2} + \vec{U}_{q_2q_3} + \vec{U}_{q_1q_3}$
+   - $–q_1––––––q_2––q_3–q_4– => \vec{U}_{system} = \vec{U}_{q_1q_2} + \vec{U}_{q_1q_3} + \vec{U}_{q_1q_4} + \vec{U}_{q_2q_3} + \vec{U}_{q_2q_4} + \vec{U}_{q_3q_4}$
+   - $Count(\Sigma \vec{U}) = \frac{n \cdot (n - 1)}{2}$ - כדי להיות בטוח שכללת את כל הזוגות האפשריים שיכולים להשפיע אחד על השני, אפשר לראות אם כמות הזוגות שהזכרת שווה ל-$\frac{n \cdot (n - 1)}{2}$. באופן כללי, הביטוי הזה משמש לדעת את כמות הזוגות היחודיים בתוך סדרה כלשהי.
