--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -65,16 +65,25 @@ $\vec{E} = \frac{\sigma}{2 \cdot \epsilon _0}$
 
 ### אנרגיה חשמלית פוטנציאלית בין שני מטענים
 
-$\vec{U_p} = \frac{k \cdot q_1 \cdot q_2}{r}$
+$U_p = \frac{k \cdot q_1 \cdot q_2}{r}$
 
- - $\vec{U_p}$ - האנרגיה הפוטנציאלית
+ - $U_p$ - האנרגיה הפוטנציאלית
  - $k = 9 \cdot 10^9 \hspace{2px} [\frac{N \cdot m^2}{C^2}]$
  - $r$ - מרחק בין מטענים
  - $q_1, q_2$ - מטען חשמלי של כל אחד מהחלקיקים
 
 ##### ניתן להגיע למשוואה זו בעזרת חישוב העבודה שנעשתה על מנת להגיע למצב שבו $q1$ ו$q2$ הם $r$ מטרים זה מזה. את העבודה ניתן לחשב ע"י אינטגרל של הכוח (שאותו נוכל להשיג מחוק קולון) לפי מרחק:
 
-$W_{\vec{F_c}} = \int_r^\infty \frac{k \cdot q_1 \cdot q_2}{r^2}\\ \dArr \\ W_{\vec{F_c}} = \frac{k \cdot q_1 \cdot q_2}{r}\\\dArr\\ \vec{U_p} = \frac{k \cdot q_1 \cdot q_2}{r}$
+$W_{\vec{F_c}} = \int_r^\infty \frac{k \cdot q_1 \cdot q_2}{r^2}\\ \dArr \\ W_{\vec{F_c}} = \frac{k \cdot q_1 \cdot q_2}{r}\\\dArr\\ U_p = \frac{k \cdot q_1 \cdot q_2}{r}$
+---
+### כוח פוטנציאלי של שדה חשמלי
+
+##### היחס בין הכוח הפןטנציאלי החשמלי שהיה פועל על מטען נקודתי אילו היה נמצא בנקודה זאת, לבין אותו המטען:
+V = \frac{U_p}{q}$
+
+ - $U_p$ - סקלאר המייצג את האנרגיה החשמלית הפוטנציאלית בין מרכז השדה החשמלי למטען $q$ שיצרנו.
+ - $q$ - גודל המטען $q$. בד"כ מטען בוחן שאנחנו יוצרים, ונתונים לו גודל שרירותי. הגודל שהכי קל לעבוד איתו הוא-1 קולון.
+ - $[V] = \frac{[U_פ]}{[q]} = [\frac{J}{C}]$ :יחידות מידה
 ---
 
 ### אנרגיה חשמלית כוללת
