--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -75,11 +75,12 @@ $U_p = \frac{k \cdot q_1 \cdot q_2}{r}$
 ##### ניתן להגיע למשוואה זו בעזרת חישוב העבודה שנעשתה על מנת להגיע למצב שבו $q1$ ו$q2$ הם $r$ מטרים זה מזה. את העבודה ניתן לחשב ע"י אינטגרל של הכוח (שאותו נוכל להשיג מחוק קולון) לפי מרחק:
 
 $W_{\vec{F_c}} = \int_r^\infty \frac{k \cdot q_1 \cdot q_2}{r^2}\\ \dArr \\ W_{\vec{F_c}} = \frac{k \cdot q_1 \cdot q_2}{r}\\\dArr\\ U_p = \frac{k \cdot q_1 \cdot q_2}{r}$
+
 ---
 ### כוח פוטנציאלי של שדה חשמלי
 
 ##### היחס בין הכוח הפןטנציאלי החשמלי שהיה פועל על מטען נקודתי אילו היה נמצא בנקודה זאת, לבין אותו המטען:
-V = \frac{U_p}{q}$
+$V = \frac{U_p}{q}$
 
  - $U_p$ - סקלאר המייצג את האנרגיה החשמלית הפוטנציאלית בין מרכז השדה החשמלי למטען $q$ שיצרנו.
  - $q$ - גודל המטען $q$. בד"כ מטען בוחן שאנחנו יוצרים, ונתונים לו גודל שרירותי. הגודל שהכי קל לעבוד איתו הוא-1 קולון.
