--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -19,7 +19,7 @@ $\vec{F_E} = k \cdot\frac{q_1 \cdot q_2}{r^2}$
 
 ### שדה חשמלי:
 ##### היחס בין הכוח החשמלי שהיה פועל על מטען נקודתי אילו היה נמצא בנקודה זאת, לבין אותו המטען:
-$\vec{E} = \frac{\vec{F_c}}{q}$
+$\vec{E} = \frac{\vec{F_c}}{q} = \frac{k \cdot q_{center}}{r^2}$
 
  - $F_c$ - ווקטור המייצג את הכוח שמופעל על המטען $q$ ע"י מרכז השדה (חוק קולון)
  - $q$ - גודל המטען $q$ (לפעמים, $q$ נוצר על ידנו, ונקרא "מטען בוחן", וניתן לא גודל שרירותי)
