--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -84,7 +84,7 @@ $V = \frac{U_p}{q}$
 
  - $U_p$ - סקלאר המייצג את האנרגיה החשמלית הפוטנציאלית בין מרכז השדה החשמלי למטען $q$ שיצרנו.
  - $q$ - גודל המטען $q$. בד"כ מטען בוחן שאנחנו יוצרים, ונתונים לו גודל שרירותי. הגודל שהכי קל לעבוד איתו הוא-1 קולון.
- - $[V] = \frac{[U_פ]}{[q]} = [\frac{J}{C}]$ :יחידות מידה
+ - $[V] = \frac{[U_p]}{[q]} = [\frac{J}{C}]$ :יחידות מידה
 ---
 
 ### אנרגיה חשמלית כוללת
