--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -7,6 +7,7 @@
    - $n$ - ננו ($\frac{1}{1,000,000,000}$)
 
 ---
+# אלקטרוסטטיקה
 
 ### חוק קולון:
 
@@ -96,3 +97,30 @@ $\vec{U}_{system} = \Sigma \vec{U}$
    - $–q_1–––q_2–––––q_3– \rArr \vec{U}_{system} = \vec{U}_{q_1q_2} + \vec{U}_{q_2q_3} + \vec{U}_{q_1q_3}$
    - $–q_1––––––q_2––q_3–q_4– => \vec{U}_{system} = \vec{U}_{q_1q_2} + \vec{U}_{q_1q_3} + \vec{U}_{q_1q_4} + \vec{U}_{q_2q_3} + \vec{U}_{q_2q_4} + \vec{U}_{q_3q_4}$
    - $Count(\Sigma \vec{U}) = \frac{n \cdot (n - 1)}{2}$ - כדי להיות בטוח שכללת את כל הזוגות האפשריים שיכולים להשפיע אחד על השני, אפשר לראות אם כמות הזוגות שהזכרת שווה ל-$\frac{n \cdot (n - 1)}{2}$. באופן כללי, הביטוי הזה משמש לדעת את כמות הזוגות היחודיים בתוך סדרה כלשהי.
+---
+
+# מעגלי זרם
+
+
+### מציאת זרם בפרק זמן מסוים
+
+$I = \frac{\Delta q}{\Delta t}$
+
+ - $I$ - ערך הזרם החשמלי, נמדד באמפר.
+ - $[I] = [\frac{\Delta q}{\Delta t}] = [\frac{c}{t}]$
+ - $\Delta q$ - ההפרש בין גודל המטען החשמלי בין סוף המדידה לתחילת המדידה.
+   - $q_2 - q_1$ שווה ערך ל
+ - $\Delta t$ - זמן המדידה
+---
+
+### כמות אלקטרונים בנפח מסוים
+
+$n_e \cdot e = \frac{\Delta q}{V}$
+
+ - $n_e \cdot e$ כמות המטען החופשי בנפח מסוים, או, כמוהמטען החשמלי שמייצרים אלקטרונים בנפח מסוים. הכמות מחושב ע"י הכפלת:
+   - $n_e$ - כמות האלקטרונים
+   - $e$ - במשקל האלקטרון
+ - $\Delta q$ - ההפרש בין גודל המטען החשמלי בין סוף המדידה לתחילת המדידה
+ - $V$ - , כאשר $L \cdot A$ הנפח שבו אנו מודדים. גודל הפח שווה ל:
+   - $L$ - גודל המדידה
+   - $A$ - גודל האובייקט
