--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -122,5 +122,48 @@ $n_e \cdot e = \frac{\Delta q}{V}$
    - $e$ - במשקל האלקטרון
  - $\Delta q$ - ההפרש בין גודל המטען החשמלי בין סוף המדידה לתחילת המדידה
  - $V$ - , כאשר $L \cdot A$ הנפח שבו אנו מודדים. גודל הפח שווה ל:
-   - $L$ - גודל המדידה
-   - $A$ - גודל האובייקט
+   - $L$ - אורך הכבל החשמלי בו אנו מודדים
+   - $A = \pi \cdot r_{cable}^2$ - פריסת הכבל החשמלי, או, השטח של עיגול שרדיוסו רדיוס הכבל
+---
+
+### חוק אוהם
+
+$I = \frac{V}{R}, V = I \cdot R$
+
+ - $I$ - ערך הזרם החשמלי, נמדד באמפר.
+ - $V$ - המתח החשמלי במעגל, נמדד בוולט.
+ - $R$ - גודל התנגדות הנגד, נמדד באוהם ($\Omega$). ככל שההתנגדות גדלה, ערך הזרם החשמלי קטן
+ - $[I] = [\frac{V}{R}] = [\frac{V}{\Omega}]$
+---
+
+### חוק הזרמים של קירכהוף
+
+```mermaid
+graph LR;
+  I[I - זרם לפני התפצלות];
+  I --> I1;
+  I --> I2;
+  I --> I3;
+```
+
+$I_{system} = I_1 + I_2 + I_3...$
+
+ - $I_{system}$ - ערך הזרם החשמלי הראשי, לפני התפצלות
+ - $I_1, I_2, I_3, ...$ - סכום הערכים של שאר הזרמים שהתפצלו מהזרת הראשי, I
+---
+
+### חוק המתחים של קירכהוף
+
+$V_{system} = V_1 + V_2 + V_3...$
+
+ - $V_{system}$ - כמות האנרגיה החשמלית שהמערכת טוענת כל חלקיק.
+ - $V_1, V_2, V_3, ...$ - המתח שצורך כל אחד מהנגדים (או כל רכיב אחר) במעגל החשמלי.
+---
+
+### חוק קירכהוף + חוק אוהם
+
+$I_T = \frac{V_T}{R_T}$
+
+ - $I_T$ - סכום הערכים של הזרמים החשמליים אחרי ההתפצלות מהזרם הראשי.
+ - $V_T$ - כמות האנרגיה החשמלית שהמערכת טוענת כל חלקיק. בד"כ שווה פשוט ל-V, המתח הראשי במעגל.
+ - $R_T$ - סכום ההתנגדויות במעגל החשמלי, מכל הנגדים שנמצאים בה.
