הוספת נוסחה + גרפים

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -167,3 +167,38 @@ $I_T = \frac{V_T}{R_T}$
  - $I_T$ - סכום הערכים של הזרמים החשמליים אחרי ההתפצלות מהזרם הראשי.
  - $V_T$ - כמות האנרגיה החשמלית שהמערכת טוענת כל חלקיק. בד"כ שווה פשוט ל-V, המתח הראשי במעגל.
  - $R_T$ - סכום ההתנגדויות במעגל החשמלי, מכל הנגדים שנמצאים בה.
+---
+
+### מציאת התנגדות כוללת של מספר נגדים הרצים במקביל
+```mermaid
+graph LR;
+  Is[I - זרם לפני התפצלות];
+  Is --> I1 --> R1 --> Ie[I - זרם אחרי התפצלות];
+  Is --> I2 --> R2 -->Ie;
+  Is --> I3 --> R3 -->Ie;
+```
+
+$\frac{1}{R_{system}} = \frac{1}{R_1} + \frac{1}{R_2} + \frac{1}{R_3}...$
+
+ - $R_{system}$ - ההתנגדות הכוללת של המעגל החשמלי, או ספציפית של החלק במעגל אותו אנו מודדים
+ - $R_1, R_2, R_3...$ - הנגדים שנמצאים מיד אחרי הפיצול, כמו שמודגם בדיאגרמה למעלה.
+  - במקרה שנמצאות כמה מערכות אחת בתוך השניה, יש לחשב קודם כל את המערכות הפנימיות ביותר, ולהשתמש בתוצאה כנגד בפני עצמו במשוואה החיצונית. דוגמה:
+```mermaid
+graph LR;
+  S[לפני:] --> Is[I]
+  Is --> R1
+  Is --> I2 --> R2
+  I2 --> R3
+
+  E[אחרי:] --> Ie[I]
+  Ie --> R1e[R1]
+  Ie --> R2e[1/R = 1/R2 + 1/ R3]
+```
+   - במקרה שנמצאים שני נגדים אחד אחרי השני, יש לסכום אותם, ולהשתמש בסכום במשוואה:
+```mermaid
+graph LR;
+  S[לפני:] --> I1[I] --> R1 --> R2
+  I1 --> R3
+  E[אחרי:] --> I2[I] --> R[R1 + R2]
+  I2 --> R_3[R3]
+```
