לשנות סדר של נוסחות לאחד יותר הגיוני

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -160,22 +160,13 @@ $V_{system} = V_1 + V_2 + V_3...$
  - $V_1, V_2, V_3, ...$ - המתח שצורך כל אחד מהנגדים (או כל רכיב אחר) במעגל החשמלי.
 ---
 
-### חוק קירכהוף + חוק אוהם
-
-$I_T = \frac{V_T}{R_T}$
-
- - $I_T$ - סכום הערכים של הזרמים החשמליים אחרי ההתפצלות מהזרם הראשי.
- - $V_T$ - כמות האנרגיה החשמלית שהמערכת טוענת כל חלקיק. בד"כ שווה פשוט ל-V, המתח הראשי במעגל.
- - $R_T$ - סכום ההתנגדויות במעגל החשמלי, מכל הנגדים שנמצאים בה.
----
-
 ### מציאת התנגדות כוללת של מספר נגדים הרצים במקביל
 ```mermaid
 graph LR;
   Is[I - זרם לפני התפצלות];
-  Is --> I1 --> R1 --> Ie[I - זרם אחרי התפצלות];
-  Is --> I2 --> R2 -->Ie;
-  Is --> I3 --> R3 -->Ie;
+  Is --> R1 --> Ie[I - זרם אחרי התפצלות];
+  Is --> R2 -->Ie;
+  Is --> R3 -->Ie;
 ```
 
 $\frac{1}{R_{system}} = \frac{1}{R_1} + \frac{1}{R_2} + \frac{1}{R_3}...$
@@ -202,3 +193,12 @@ graph LR;
   E[אחרי:] --> I2[I] --> R[R1 + R2]
   I2 --> R_3[R3]
 ```
+---
+
+### חוק קירכהוף + חוק אוהם
+
+$I_T = \frac{V_T}{R_T}$
+
+ - $I_T$ - סכום הערכים של הזרמים החשמליים אחרי ההתפצלות מהזרם הראשי.
+ - $V_T$ - כמות האנרגיה החשמלית שהמערכת טוענת כל חלקיק. בד"כ שווה פשוט ל-V, המתח הראשי במעגל.
+ - $R_T$ - סכום ההתנגדויות במעגל החשמלי, מכל הנגדים שנמצאים בה.
