מציאת התנגדות של חומר (נוסחה)

--- a/דפי נוסחאות/חשמל.md
+++ b/דפי נוסחאות/חשמל.md
@@ -101,7 +101,6 @@ $\vec{U}_{system} = \Sigma \vec{U}$
 
 # מעגלי זרם
 
-
 ### מציאת זרם בפרק זמן מסוים
 
 $I = \frac{\Delta q}{\Delta t}$
@@ -124,6 +123,17 @@ $n_e \cdot e = \frac{\Delta q}{V}$
  - $V$ - , כאשר $L \cdot A$ הנפח שבו אנו מודדים. גודל הפח שווה ל:
    - $L$ - אורך הכבל החשמלי בו אנו מודדים
    - $A = \pi \cdot r_{cable}^2$ - פריסת הכבל החשמלי, או, השטח של עיגול שרדיוסו רדיוס הכבל
+---
+
+### מציאת התנגדות של חומר
+#### בדרך כלל, כבל חשמלי
+
+$R = \frac{\rho \cdot L}{A}$
+
+ - $R$ - ההתנגדות של החומר החשמלי שאנו מודדים, באורך ובפריסה הנתונים
+ - $\rho$ - מספר מסויים, מציין את ההתנגדות של החומר שדרכו אנו מוליכים חשמלי. נקרא גם התנדדות סגולית
+ - $L$ - אורך הכבל החשמלי בו אנו מודדים
+ - $A$- פריסת החומר, או, השטח של חלק דו-מימדי כלשהו מהחומר התלת מימדי. לדוגמה, לקחת עיגול מתוך גליל, או לקחת ריבוע מתוך תיבה ריבועית. בדרך כלל מדובר בכבל חשמלי, שהוא גליל, ולכן הפריסה תהיה שווה לרדיוס הגליל בריבוע כפול $\pi$
 ---
 
 ### חוק אוהם
